@@ -106,7 +106,7 @@
 									<span id="nm01">Base Stats</span>
 								</div>
 								<div style="float: right; padding-right: 3px;">
-									<input id="lab0" name="vanilla" onclick="ClickWeaponType(0) | WeaponSet2() | PopulateCards();" type="checkbox">
+									<input id="lab0" name="vanilla" onclick="Vanilla();" type="checkbox">
 									<label for="lab0"><span id="nm079">Vanilla</span></label> / 
 									<input id="lab1" name="A_youshi" onclick="calc()" type="checkbox">
 									<label for="lab1"><span id="nm078">Adopted</span></label> / 
