@@ -1,5 +1,9 @@
 [Update 2018-07-04]
-- Added vanilla mode [Loa]
+- Issue #238: Added vanilla mode [Loa]
+	Moved left hand weapon card option generation to new function PopulateCardsLeft() in card.js
+	Added new function ClearCards() in card.js that removes all card select options
+	Added new function Vanilla() in head.js that switches between vanilla and non-vanilla mode
+		Dependent upon restrictedItems and restrictedCards arrays in etc.js
 
 [Update 2018-07-04]
 - Completed cardID array for linking [Loa]
